# scarfolder-py

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  Dockerfile  LICENSE  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
assets/css/: styles.85cfdf42.css
assets/js/: 0e384e19.74e101ae.js  0e384e19.83b7de6a.js  17896441.d330717e.js  1a20bc57.5ce1ddcc.js  1a20bc57.8b9908f8.js  237.f9bfc3ed.js  294ac9d5.150c26ca.js  294ac9d5.698d67cb.js  334763e2.b18d0436.js  45a5cd1f.0162bd93.js  45a5cd1f.62bbcd56.js  5e95c892.4dfafc75.js  93234bd6.2c33c61b.js  9ed00105.7e3623f7.js  9ed00105.b0d43f1f.js  a7bd4aaa.b8747ce2.js  a94703ab.29030a87.js  aba21aa0.11cd4c94.js  e61bcfc4.711118b5.js  e61bcfc4.78ceebd3.js  main.4b19ef1b.js  runtime~main.38ed14b1.js  runtime~main.eb8e2322.js
cli/: index.html
concepts/: index.html
configuration/: index.html
custom-plugins/: index.html
docker/: index.html
docs/: docusaurus.config.js  package.json  sidebars.js
docs/docs/: cli.md  concepts.md  configuration.md  custom-plugins.md  docker.md  intro.md  plugins.md
examples/custom_plugins/: docker-compose.yml  generators.py  loaders.py  scarf.yaml
examples/hello_world/: scarf.yaml
plugins/: index.html
scarfolder/: __init__.py  cli.py  exceptions.py
scarfolder/config/: loader.py  resolver.py  schema.py
scarfolder/core/: base.py  context.py  pipeline.py  registry.py
scarfolder/generators/: __init__.py  objects.py  util.py
scarfolder/loaders/: __init__.py  console.py  file.py  sql.py
tests/: test_env_and_loaders.py  test_object_generator.py  test_pipeline.py  test_resolver.py
(+7 files in other folders)
